@@ -12,6 +12,12 @@ What's New in Python 2.4 alpha 1?
 Core and builtins
 -----------------
 
+- Critical bugfix, for SF bug 840829:  if cyclic garbage collection
+  happened to occur during a weakref callback for a new-style class
+  instance, subtle memory corruption was the result (in a release build;
+  in a debug build, a segfault occurred reliably very soon after).
+  This has been repaired.
+
 - Added a reversed() builtin function that returns a reverse iterator
   over a sequence.
 
